@@ -14,3 +14,4 @@ AV2 Changelog :: version a4.2
 > Fix air jump not working issues (path block, on edge of block, etc)
 > Fix fire arc boomerang not working
 > Fix air jump XP not added
+> Fix fireballs remaining after firebender entity dies
